--- a/packages/angular/projects/ds-rte-lib/src/lib/components/toast/toast.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/toast/toast.component.html
@@ -2,18 +2,29 @@
   class="rte-toast {{ type() }} {{ position() }} {{ alignment() }}"
   role="status"
   ref="{ref}"
-  [ngClass]="{ open: isOpen(), close: !isOpen() }"
+  [ngClass]="{ open: isOpen() }"
 >
   <div class="rte-toast-content">
-    <rte-icon
-      class="rte-toast-icon"
-      aria-hidden="true"
-      [name]="defaultIconName()"
-      [size]="iconSize"
-    />
+    @if (displayLeftIcon()) {
+      <rte-icon
+        class="rte-toast-icon"
+        aria-hidden="true"
+        [name]="defaultIconName()"
+        [size]="iconSize"
+      />
+    } @else {
+      @if (displayCustomIcon()) {
+        <rte-icon
+          class="rte-toast-icon"
+          aria-hidden="true"
+          [name]="iconName()!"
+          [size]="iconSize"
+        />
+      }
+    }
     <span class="rte-toast-message">{{ message() }}</span>
   </div>
-  @if (showActionButton() && actionButtonLabel() && onActionButtonClick()) {
+  @if (displayActionButton()) {
     <button
       rteButton
       rteButtonVariant="text"
