feat(doc): Add Colors page

--- a/packages/design-docs/src/components/Paragraph/Paragraph.scss
+++ b/packages/design-docs/src/components/Paragraph/Paragraph.scss
@@ -5,5 +5,9 @@
     @include typography-text-m;
     color: var(--content-primary);
     margin: 0;
+
+    .bold {
+      @include typography-text-m-bold;
+    }
   }
 }
