feat (docs): add border docs

--- a/packages/design-docs/src/components/DocsSection/DocsSection.scss
+++ b/packages/design-docs/src/components/DocsSection/DocsSection.scss
@@ -3,8 +3,28 @@
 .sbdocs {
   .rte-docs-section {
 
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+
+    .rte-docs-section-title {
+      @include typography-heading-xs;
+      color: var(--content-primary);
+      margin: 0;
+    }
+
     .rte-docs-section-content {
-      white-space: pre-line;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      margin-bottom: 4px;
+
+      p {
+        @include typography-text-m;
+        color: var(--content-primary);
+        margin: 0;
+        white-space: pre-line;
+      }
     }
 
     .rte-docs-section-image {
