feat (searchbar): add searchbar base functionality

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button/icon-button.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button/icon-button.component.html
@@ -4,6 +4,7 @@
     class="rte-icon-button {{ variant() }} size-{{ size() }}"
     rteBadge
     [class.compact-spacing]="compactSpacing()"
+    [ngStyle]="customStyle()"
     [disabled]="disabled()"
     [attr.aria-label]="ariaLabel()"
     [attr.aria-labelledby]="ariaLabelledBy()"
@@ -22,6 +23,7 @@
     *ngIf="isValidIconName"
     class="rte-icon-button {{ variant() }} size-{{ size() }}"
     [class.compact-spacing]="compactSpacing()"
+    [ngStyle]="customStyle()"
     [disabled]="disabled()"
     [attr.aria-label]="ariaLabel()"
     [attr.aria-labelledby]="ariaLabelledBy()"
