--- a/packages/angular/projects/ds-rte-lib/src/lib/components/text-input/text-input.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/text-input/text-input.component.scss
@@ -9,6 +9,30 @@
     align-items: flex-start;
     gap: $positive-spacing_0;
 
+    &.compact-spacing {
+        .input-container {
+            height: 24px;
+            min-height: 24px;
+            .input {
+                .input-bar {
+                    .input-field {
+                        height: 24px;
+                        min-height: 24px;
+                    }
+                }
+            }
+        }
+        .rte-icon-button {
+            ::ng-deep {
+                button {
+                    height: 24px;
+                    width: 24px;
+                    padding: 0 $positive-spacing-025;    
+                }
+            }
+        }
+    }
+
     &.side {
         align-items: center;
         flex-direction: row;
@@ -109,33 +133,20 @@
                 .right-icon {
                     position: absolute;
                     right: $positive-spacing-100;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
                     color: var(--content-secondary);
 
-                    ::ng-deep {
-                        .rte-icon-button {
-                            color: var(--content-secondary);
-                            height: 24px;
-                            width: 24px;
-                            padding: 0 $positive-spacing-025;
-                        }
-
-                        .rte-icon-button:focus {
-                            outline: none;
-                        }
-
-                        .rte-icon-button:focus-visible {
-                            outline: 1px solid var(--border-brand-focused);
-                            border-radius: $radius-m;
-
-                            &::after {
-                                display: none;
-                            }
-                        }
+                    &:focus {
+                        outline: none;
                     }
 
+                    &:focus-visible {
+                        outline: $width-xs solid var(--border-brand-focused);
+                        border-radius: $radius-m;
+
+                        &::after {
+                            display: none;
+                        }
+                    }
                 }
 
                 .input-field {
