deploy: 90d3c8c9c81f7d639d9e34a45bf933ea0bd685cc

--- a/preview/dsr-139/angular/components/dropdown/dropdown-menu/dropdown-menu.component.html
+++ b/preview/dsr-139/angular/components/dropdown/dropdown-menu/dropdown-menu.component.html
@@ -1,4 +1,4 @@
-<div class="rte-dropdown-menu">
+<div class="rte-dropdown-menu" [style.width]="with() !== undefined ? with() + 'px' : undefined">
   <ul 
     class="rte-dropdown-items"
     role="menu" 
