--- a/preview/dsr-139/angular/components/text-input/text-input.component.html
+++ b/preview/dsr-139/angular/components/text-input/text-input.component.html
@@ -1,6 +1,6 @@
 <div
   class="container {{labelPosition()}}"
-  [ngClass]="{'error': error()}"
+  [ngClass]="{'error': error(), 'compact-spacing': compactSpacing()}"
   [style.width]="width()"
 >
   <ng-container *ngIf="label()">
