--- a/preview/dsr-139/angular/components/text-input/text-input.component.scss
+++ b/preview/dsr-139/angular/components/text-input/text-input.component.scss
@@ -9,6 +9,30 @@
     align-items: flex-start;
     gap: $positive-spacing_0;
 
+    &.compact-spacing {
+        .input-container {
+            height: 24px;
+            min-height: 24px;
+            .input {
+                .input-bar {
+                    .input-field {
+                        height: 24px;
+                        min-height: 24px;
+                    }
+                }
+            }
+        }
+        .rte-icon-button {
+            ::ng-deep {
+                button {
+                    height: 24px;
+                    width: 24px;
+                    padding: 0 $positive-spacing-025;    
+                }
+            }
+        }
+    }
+
     &.side {
         align-items: center;
         flex-direction: row;
