--- a/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-item/dropdown-item.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-item/dropdown-item.component.html
@@ -5,14 +5,20 @@
     role="menuitem"
     tabindex="0"
     [attr.data-disabled]="item()?.disabled"
-    [attr.aria-disabled]="item()?.disabled"
+    [attr.data-active]="item()?.selected"
     (click)="handleClick($event)"
     (keydown)="handleKeyDown($event)"
   >
-    <span *ngIf="item()?.hasIndent && !item()?.leftIcon" style="width: 20px"></span>
+    <span
+      *ngIf="item()?.hasIndent && !item()?.leftIcon"
+      style="width: 20px"
+    ></span>
     <rte-icon *ngIf="item()?.leftIcon" [name]="item()?.leftIcon ?? ''" />
     <ng-container [ngSwitch]="!!item()?.link">
-      <a *ngSwitchCase="true" style="flex: 2; text-decoration: none; color: inherit" [href]="item()?.link"
+      <a
+        *ngSwitchCase="true"
+        style="flex: 2; text-decoration: none; color: inherit"
+        [href]="item()?.link"
         >{{ item()?.label }}
       </a>
       <span *ngSwitchDefault style="flex: 2">{{ item()?.label }}</span>
