fix(banner): remove show icon props + remove top and left radius corner

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/banner/banner.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/banner/banner.component.html
@@ -5,7 +5,7 @@
   [ngClass]="{ open: visible(), close: !visible() }"
   [attr.role]="type() === 'error' ? 'alert' : 'status'"
 >
-  <div *ngIf="showIcon()" class="rte-banner-icon">
+  <div class="rte-banner-icon">
     <rte-icon [name]="iconName()" [size]="32" />
   </div>
   <div class="rte-banner-content">
