--- a/packages/angular/projects/ds-rte-lib/src/lib/components/banner/banner.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/banner/banner.component.scss
@@ -6,7 +6,7 @@
   padding: $positive-spacing_200;
   gap: $positive-spacing_200;
   align-self: stretch;
-  border-radius: $radius-s;
+  border-radius: 0 0 $radius-s $radius-s;
   display: flex;
   box-sizing: border-box;
   width: 100%;
