--- a/preview/dsr-391/angular/components/tag/tag.component.html
+++ b/preview/dsr-391/angular/components/tag/tag.component.html
@@ -5,7 +5,9 @@
   [attr.data-color]="color()"
   [attr.data-compact-spacing]="compactSpacing()"
 >
-  <ng-container *ngIf="showLeftIcon() && isValidIconName()">
+  <ng-container
+    *ngIf="isValidIconName() && (tagType() === 'status' || showLeftIcon())"
+  >
     <rte-icon [name]="computedIconName()" [size]="16"></rte-icon>
   </ng-container>
   <ng-container *ngIf="label">
