--- a/angular/components/button/button.component.html
+++ b/angular/components/button/button.component.html
@@ -1,3 +1,4 @@
 <span class="rte-button-label">
-    <ng-content/>
+  <ng-content />
+  <!-- Le badge est géré par BadgeDirective attachée via hostDirectives -->
 </span>
