fix (docs): add missing links to Contribution docs

--- a/packages/design-docs/src/styles/GeneralDocs.scss
+++ b/packages/design-docs/src/styles/GeneralDocs.scss
@@ -28,5 +28,10 @@
   li {
     font-family: Arial, sans-serif;
   }
+
+  a.docs-link {
+    color: var(--content-primary);
+    text-decoration: underline;
+  }
 }
 
