feat (docs): add design startup docs

--- a/packages/design-docs/src/styles/GeneralDocs.scss
+++ b/packages/design-docs/src/styles/GeneralDocs.scss
@@ -32,6 +32,7 @@
   a.docs-link {
     color: var(--content-primary);
     text-decoration: underline;
+    font-family: Arial, sans-serif;
   }
 }
 
