deploy: 28245e29420c7eac4034a562a38050b6cac7764f

--- a/preview/dsr-139/angular/components/searchbar/searchbar.component.html
+++ b/preview/dsr-139/angular/components/searchbar/searchbar.component.html
@@ -11,6 +11,7 @@
         [rteDropdownIsOpen]="isOpenComputed()"
         [rteDropdownOffset]="DROPDOWN_OFFSET"
         [rteDropdownWidth]="textInputWidth()"
+        [rteDropdownAutofocus]="false"
         [attr.data-dropdown-id]="dropdownId()"
         (menuEvent)="onMenuEvent($event)"
       >
