fix(select): set positionning

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/select/select.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/select/select.component.html
@@ -40,7 +40,7 @@
   <div
     rteDropdown
     [rteDropdownId]="'dropdown_select_' + id()"
-    [rteDropdownPosition]="'bottom'"
+    [rteDropdownPosition]="dropdownPosition()"
     [rteDropdownOffset]="10"
     [rteDroprownTriggerToggle]="true"
     [rteDropdownWidth]="selectWidth()"
