--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -10,7 +10,7 @@
     type="info"
     message="This is an info banner"
     [closable]="true"
-    title="Info Banner"
+    title="Info Banner mzlfkzlekfme"
     [isOpen]="isInfoBannerVisible()"
   ></rte-banner>
   <rte-banner
@@ -281,86 +281,18 @@
           Cancel
         </button>
       </ng-template>
+      <rte-divider />
+      <div>
+        <button rteButton rteButtonVariant="neutral" (click)="toggleToast()">
+          Toggle Toast
+        </button>
+      </div>
+      <rte-divider />
+      <rte-select
+        label="Select an option"
+        [options]="selectOptions"
+        [showResetButton]="true"
+      />
     </div>
-  </div>
-
-  <rte-switch
-    label="Switch"
-    [disabled]="false"
-    [readOnly]="false"
-    [appearance]="'brand'"
-  />
-  <rte-switch
-    label="Switch ReadOnly"
-    [disabled]="false"
-    [readOnly]="true"
-    [appearance]="'brand'"
-    [showIcon]="true"
-  />
-  <rte-switch
-    label="Switch disabled"
-    [disabled]="true"
-    [readOnly]="false"
-    [appearance]="'brand'"
-    [showLabel]="true"
-    [checked]="true"
-  />
-  <rte-divider orientation="vertical" thickness="bold"></rte-divider>
-  <hr />
-  <div style="width: 380px; display: flex; flex-direction: column; gap: 10px">
-    <rte-segmented-control
-      [options]="segments"
-      [selectedSegment]="selectedSegment()"
-      (change)="onSegmentSelected($event)"
-    />
-  </div>
-  <hr />
-  <rte-breadcrumbs [items]="breadcrumbItems" />
-  <hr />
-  <div style="margin-top: 100px; display: flex; justify-content: center">
-    <button
-      rteButton
-      buttonType="button"
-      rtePopover
-      rtePopoverPrimaryButtonLabel="Primary"
-      rtePopoverContent="This is the popover content"
-      rtePopoverTitle="Popover Title"
-    >
-      Hover me
-    </button>
-  </div>
-  <rte-divider />
-  <div
-    rteModal
-    [rteModalId]="'rte-modal-1'"
-    [rteModalTitle]="'Modal title'"
-    [rteModalDescription]="'This is a description for the modal.'"
-  >
-    <button rteButton rteButtonVariant="primary" rteModalTrigger>
-      Open Modal
-    </button>
-    <ng-template #primaryButton>
-      <button
-        rteButton
-        rteButtonVariant="primary"
-        (click)="handleModalPrimaryClick()"
-      >
-        Continue
-      </button>
-    </ng-template>
-    <ng-template #secondaryButton>
-      <button
-        rteButton
-        rteButtonVariant="neutral"
-        (click)="handleModalSecondaryClick()"
-      >
-        Cancel
-      </button>
-    </ng-template>
-  </div>
-  <div>
-    <button rteButton rteButtonVariant="neutral" (click)="toggleToast()">
-      Toggle Toast
-    </button>
   </div>
 </rte-side-nav>
